force-app/main/default/objects/MUSW__Proceeding_Agenda_Item__c/fields/CVRD_DS_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Adoption recommended</fullName>
            </value>
            <value>
                <fullName>Advance to ALC with comments</fullName>
            </value>
            <value>
                <fullName>Advance to ALC with comments recommended</fullName>
            </value>
            <value>
                <fullName>Advance to ALC with no comments</fullName>
            </value>
            <value>
                <fullName>Advance to ALC with no comments recommended</fullName>
            </value>
            <value>
                <fullName>Advance to ALC with support</fullName>
            </value>
            <value>
                <fullName>Advance to ALC with support recommended</fullName>
            </value>
            <value>
                <fullName>Advance to ALC without support</fullName>
            </value>
            <value>
                <fullName>Advance to ALC without support recommended</fullName>
            </value>
            <value>
                <fullName>Advance with public hearing</fullName>
            </value>
            <value>
                <fullName>Advance with public hearing recommended</fullName>
            </value>
            <value>
                <fullName>Advance without public hearing</fullName>
            </value>
            <value>
                <fullName>Advance without public hearing recommended</fullName>
            </value>
            <value>
                <fullName>Advance without referrals recommended</fullName>
            </value>
            <value>
                <fullName>Advanced without referrals</fullName>
            </value>
            <value>
                <fullName>Approval recommended</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cash-in-lieu approved</fullName>
            </value>
            <value>
                <fullName>Cash-in-lieu recommended</fullName>
            </value>
            <value>
                <fullName>Combination of cash-in-lieu &amp; parkland dedication approved</fullName>
            </value>
            <value>
                <fullName>Combination of cash-in-lieu &amp; parkland dedication recommended</fullName>
            </value>
            <value>
                <fullName>Comments approved [after public engagement if opted in]</fullName>
            </value>
            <value>
                <fullName>Comments recommended [after public engagement]</fullName>
            </value>
            <value>
                <fullName>Conditional Statement of Concurrence  recommended</fullName>
            </value>
            <value>
                <fullName>Denial recommended</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Denied - hardship</fullName>
            </value>
            <value>
                <fullName>Denied - no hardship</fullName>
            </value>
            <value>
                <fullName>Do no request exclusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>