force-app/main/default/objects/MUSW__Proceeding_Agenda_Item__c/fields/CVRD_DS_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Public_URL__c</fullName>
    <label>Public URL</label>
    <type>Url</type>
</CustomField>