force-app/main/default/objects/MUSW__Proceeding_Agenda_Item__c/validationRules/CVRD_DS_Restrict_creation_of_record.validationRule-meta.xml
<ValidationRule>
    <fullName>CVRD_DS_Restrict_creation_of_record</fullName>
    <active>true</active>
    <description>Restrict creation of record when proceeding agenda is full or closed.</description>
    <errorConditionFormula>AND(
    ISNEW(),
    MUSW__Proceeding__r.MUSW__Availability__c &lt;&gt; &quot;Open&quot;
)</errorConditionFormula>
    <errorMessage>You can&apos;t create a record when proceeding availability is closed or full.</errorMessage>
</ValidationRule>